--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Adrsh</title>
   </head>
   <body>
@@ -11,13 +11,74 @@
     <section id="hero">
       <div class="hero container">
         <div>
-            <h1>Hello,<span></span></h1>
-            <h1> My Name is <span></span></h1>
-            <h1> Adarsh <span></span></h1>
-            <a href="#" type="button" class="cta">Portfolio</a>
+          <h1>Hello,<span></span></h1>
+          <h1>My Name is <span></span></h1>
+          <h1>Adarsh <span></span></h1>
+          <a href="#" type="button" class="cta">Portfolio</a>
         </div>
       </div>
     </section>
     <!-- End of hero section  -->
+    <!-- Service Section  -->
+    <section id="service">
+      <div class="service container">
+        <div class="service-top">
+          <h1 class="section-title">Serv<span>i</span>ces</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Scelerisque viverra mauris in aliquam sem fringilla ut morbi
+            tincidunt. Etiam erat velit scelerisque in dictum non. Faucibus a
+            pellentesque sit amet porttitor eget dolor morbi non. Condimentum
+            mattis pellentesque id nibh tortor id aliquet. Iaculis at erat
+            pellentesque adipiscing commodo elit at. Vel fringilla est
+            ullamcorper eget nulla facilisi etiam dignissim.
+          </p>
+        </div>
+        <div class="service-bottom">
+          <div class="service-item">
+            <div class="icon">
+              <img src="./img/icons8-web-settings-100.png" alt="" />
+            </div>
+            <h2>Web Designing</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="service-item">
+            <div class="icon">
+              <img src="./img/icons8-web-settings-100.png" alt="" />
+            </div>
+            <h2>Web Designing</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="service-item">
+            <div class="icon">
+              <img src="./img/icons8-web-settings-100.png" alt="" />
+            </div>
+            <h2>Web Designing</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="service-item">
+            <div class="icon">
+              <img src="./img/icons8-web-settings-100.png" alt="" />
+            </div>
+            <h2>Web Designing</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Service Section  -->
   </body>
 </html>
