--- a/index.html
+++ b/index.html
@@ -157,5 +157,25 @@
       </div>
     </section>
     <!-- /* End of Project Section  */ -->
+
+    <!-- About Section  -->
+    <div id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./img/IMG_0655.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>Me</span></h1>
+                <h2>Front End Developer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="cta" type="button">Download  Resume</a>
+            </div>
+        </div>
+    </div>
+    <!-- End of About Section  -->
   </body>
 </html>
