--- a/index.html
+++ b/index.html
@@ -160,22 +160,61 @@
 
     <!-- About Section  -->
     <div id="about">
-        <div class="about container">
-            <div class="col-left">
-                <div class="about-img">
-                    <img src="./img/IMG_0655.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-right">
-                <h1 class="section-title">About <span>Me</span></h1>
-                <h2>Front End Developer</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="cta" type="button">Download  Resume</a>
-            </div>
+      <div class="about container">
+        <div class="col-left">
+          <div class="about-img">
+            <img src="./img/IMG_0655.jpg" alt="" />
+          </div>
         </div>
+        <div class="col-right">
+          <h1 class="section-title">About <span>Me</span></h1>
+          <h2>Front End Developer</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="cta" type="button">Download Resume</a>
+        </div>
+      </div>
     </div>
     <!-- End of About Section  -->
+    <!-- Contact Section  -->
+    <div id="contact">
+      <div class="contact container">
+        <div>
+          <h1 class="section-title">Contact <span>Info</span></h1>
+        </div>
+        <div class="contact-items">
+          <div class="contact-item">
+            <div class="icon">
+              <img src="./img/call.png" alt="" />
+            </div>
+            <div class="contact-info">
+              <h1>Phone</h1>
+              <h2>+918129625216</h2>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon">
+              <img src="./img/icons8-important-mail-50.png" alt="" />
+            </div>
+            <div class="contact-info">
+              <h1>Mail</h1>
+              <h2>adrshojk@gmail.com</h2>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon">
+              <img src="./img/homee.png" alt="" />
+            </div>
+            <div class="contact-info">
+              <h1>Address</h1>
+              <h2>Kannur,Kerala</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Contact Section -->
   </body>
 </html>
