--- a/index.html
+++ b/index.html
@@ -216,5 +216,23 @@
       </div>
     </div>
     <!-- End of Contact Section -->
+    <!-- Footer -->
+    <div id="footer">
+      <div class="footer container">
+        <div class="brand">
+          <h1><span>A</span>d<span>A</span>rsh</h1>
+        </div>
+        <h2>Our Web Solutions</h2>
+        <div class="social-icon">
+          <div class="social-item">
+            <a href="#" class="icon">
+              <img src="./img/git.png" alt="" />
+            </a>
+          </div>
+        </div>
+        <p>Copyright © 2020 Adarsh. All Rights Reserved</p>
+      </div>
+    </div>
+    <!-- End of Footer -->
   </body>
 </html>
