--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Adrsh</title>
   </head>
   <body>
+      <!-- Header  -->
+      <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="">
+                        <h1><span>A</span>d<span>A</span>rsh</h1>
+                    </a>
+                </div>
+                <div class="nav-list">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="#" data-after="Home">Home</a></li>
+                        <li><a href="#" data-after="services">Services</a></li>
+                        <li><a href="#" data-after="Projects">Projects</a></li>
+                        <li><a href="#" data-after="About">About</a></li>
+                        <li><a href="#" data-after="contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- End of Header  -->
     <!-- hero section  -->
     <section id="hero">
       <div class="hero container">
