--- a/index.html
+++ b/index.html
@@ -4,34 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Adrsh</title>
   </head>
   <body>
-      <!-- Header  -->
-      <section id="header">
-        <div class="header container">
-            <div class="nav-bar">
-                <div class="brand">
-                    <a href="">
-                        <h1><span>A</span>d<span>A</span>rsh</h1>
-                    </a>
-                </div>
-                <div class="nav-list">
-                    <div class="hamburger">
-                        <div class="bar"></div>
-                    </div>
-                    <ul>
-                        <li><a href="#" data-after="Home">Home</a></li>
-                        <li><a href="#" data-after="services">Services</a></li>
-                        <li><a href="#" data-after="Projects">Projects</a></li>
-                        <li><a href="#" data-after="About">About</a></li>
-                        <li><a href="#" data-after="contact">Contact</a></li>
-                    </ul>
-                </div>
+    <!-- Header  -->
+    <section id="header">
+      <div class="header container">
+        <div class="nav-bar">
+          <div class="brand">
+            <a href="">
+              <h1><span>A</span>d<span>A</span>rsh</h1>
+            </a>
+          </div>
+          <div class="nav-list">
+            <div class="hamburger">
+              <div class="bar"></div>
             </div>
+            <ul>
+              <li><a href="#hero" data-after="Home">Home</a></li>
+              <li><a href="#service" data-after="services">Services</a></li>
+              <li><a href="#project" data-after="Projects">Projects</a></li>
+              <li><a href="#about" data-after="About">About</a></li>
+              <li><a href="#contact" data-after="contact">Contact</a></li>
+            </ul>
+          </div>
         </div>
-      </section>
-      <!-- End of Header  -->
+      </div>
+    </section>
+    <!-- End of Header  -->
     <!-- hero section  -->
     <section id="hero">
       <div class="hero container">
@@ -259,5 +260,6 @@
       </div>
     </div>
     <!-- End of Footer -->
+    <script src="./index.js"></script>
   </body>
 </html>
