--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <h2>Our Web Solutions</h2>
         <div class="social-icon">
           <div class="social-item">
-            <a href="#" class="icon">
+            <a href="https://github.com/Adrshojk" class="icon">
               <img src="./img/git.png" alt="" />
             </a>
           </div>
